fix react select dark mode colors

--- a/styles/datatables.css
+++ b/styles/datatables.css
@@ -35,11 +35,18 @@ table tr .mantine-Checkbox-root {
     @apply text-center;
 } */
 .datatables .mantine-gzzjso,
-.datatables .mantine-lrzwoq{
+.datatables .mantine-ooem79{
     @apply border-t-0 !p-0 !pt-5 !bg-transparent;
 }
 .datatables.pagination-padding .mantine-gzzjso {
     @apply !px-5;
+}
+.mantine-kn8vaf{
+    flex: 1 1 auto;
+    justify-content: flex-end;
+    gap: 0.25rem
+rem
+;
 }
 [dir='rtl'] .datatables .mantine-ScrollArea-root.mantine-lvjyp7 {
     direction: rtl;
@@ -70,7 +77,7 @@ table tr .mantine-Checkbox-root {
     @apply hidden;
 }
 .mantine-Group-root .mantine-UnstyledButton-root {
-    @apply hover:bg-inherit dark:!border-[#191e3a] dark:text-white-dark;
+    @apply hover:bg-inherit dark:!border-[#191e3a] dark:text-white-dark rounded-full;
 }
 
 .mantine-Table-root th.text-right .mantine-Group-root {
@@ -83,6 +90,9 @@ table tr .mantine-Checkbox-root {
     @apply dark:!border-[#191e3a] dark:!bg-[#1a2941] dark:text-white-dark;
 }
 
+.mantine-ooem79{
+    @apply dark:bg-transparent;
+}
 .mantine-Checkbox-body {
     @apply grid h-5 w-5 place-content-center overflow-hidden rounded  border-0  bg-transparent text-primary;
 }
@@ -99,10 +109,10 @@ table tr .mantine-Checkbox-root {
 .mantine-3xbgk5 .mantine-qo1k2 {
     @apply p-2 text-sm;
 }
-.mantine-Pagination-item {
+.mantine-Pagination-control {
     @apply h-9 w-9 rounded-full border-white-light !bg-white-light font-nunito text-sm !text-[#3b3f5c] hover:!bg-primary hover:!text-white dark:border-[#191e3a] dark:!bg-[#191e3a] dark:!text-white;
 }
-.mantine-Pagination-item[data-active] {
+.mantine-Pagination-control[data-active] {
     @apply !bg-primary !text-white;
 }
 .mantine-Menu-item .mantine-Text-root {
